--- a/app/src/main/res/layout/public_transit_screen.xml
+++ b/app/src/main/res/layout/public_transit_screen.xml
@@ -24,6 +24,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
