increase See More tap size

--- a/app/src/main/res/layout/places_screen.xml
+++ b/app/src/main/res/layout/places_screen.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="32dp">
+                android:layout_marginBottom="16dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -115,7 +115,6 @@
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
                     android:background="@color/bkgSection"
                     app:cardCornerRadius="8dp"
                     app:strokeColor="@android:color/transparent">
@@ -174,11 +173,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="16dp"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp"
                     android:layout_gravity="end"
                     android:text="@string/see_more"
                     android:id="@+id/goToBikeButton"
                     android:textColor="@color/Teal"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_marginBottom="4dp" />
             </LinearLayout>
@@ -265,7 +266,6 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
                 android:background="@color/bkgSection"
                 app:strokeColor="@android:color/transparent">
@@ -328,10 +328,12 @@
                 android:paddingHorizontal="16dp"
                 android:layout_gravity="end"
                 android:text="@string/see_more"
+                android:padding="16dp"
                 android:textColor="@color/Teal"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="4dp" /> <!-- Add margin for spacing from the last card -->
+                android:layout_marginBottom="16dp"
+                /> <!-- Add margin for spacing from the last card -->
 
         </LinearLayout>
     </ScrollView>
