--- a/app/src/main/res/layout/activity_location_search.xml
+++ b/app/src/main/res/layout/activity_location_search.xml
@@ -31,15 +31,46 @@
         android:background="@color/bkgSection"
         android:focusable="true"
         android:queryHint="Search for locations"
-        app:theme="@style/SearchViewStyle"
-        />
+        app:theme="@style/SearchViewStyle" />
 
-
-    <ListView
-        android:id="@+id/list_view"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/bkgSection"
-        />
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <!-- ListView for search results -->
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/bkgSurface" />
+
+        <!-- 'No Results' message -->
+        <LinearLayout
+            android:id="@+id/no_results_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/no_results_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/noresults"
+                android:contentDescription="No results" />
+
+            <TextView
+                android:id="@+id/no_results_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No results"
+                android:textAppearance="?attr/textAppearanceBody1"
+                android:paddingTop="16dp"
+                android:textColor="@color/darkText" />
+        </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
